--- a/Readme
+++ b/Readme
@@ -9,18 +9,16 @@ Finally Postgres has made a impresionant job with the JSONB. We have some versio
 
 But
 
-Postgres with JSONB run ~1000 times faster!!!! and the GIN index have very good optimization for the new model of Dédalo.
+Postgres with JSONB run ~1000 times faster!!!! and the GIN index have very good optimization for the new schema model of Dédalo.
 
 We think that the new model is a future for Dédalo, and with PostgreSQL 9.4 is possible!!!!
 
-We are more exited with the new JSONB and we are waiting for VOZKA!
+We are very exited with the new JSONB and are expectant and waiting of VOZKA!
 
 If you need install the beta 1, we recomended MySQL 5.6 and PHP 5.5.
 
 For Intangible Heritage with the Render model (standar schema) for the IPCE you will need install Memcache or Redis.
 
-For the Oral History no is necesary Memcache or Redis.
+For the Oral History no is necessary Memcache or Redis.
 
 If you have more than 100.000 records. We recomended that wait to the beta 2 (very, very soon)
-
-The version 3 no will be update.
