change to beta 2

--- a/Readme
+++ b/Readme
@@ -1,11 +1,11 @@
 Readme
-Ver 4 Beta 1
+Ver 4 Beta 1 - 01-09-2014
 
 This beta is the last version of MySQL.
 
 The new version Beta 2 will run in PostgreSQL 9.4 Beta3 ONLY.
 
-Finally Postgres has made a impresionant job with the JSONB. We have some versions of Dédalo with the new schema of "Matrix" (id, parent, dato, tipo, lang) in MySQL than run very very slowly. We are working in the new format the last 4 years and the Beta 1 of Dédalo can run acceptably well. Dédalo have some caches for run the searchers but this version don't work "fine" with a large amount of data >100.000 rows (>100.000 interviews, or >100.000 heritage goods...).
+Finally Postgres comunity has made a impresionant job with the JSONB. We have some versions of Dédalo with the new schema of "Matrix" (id, parent, dato, tipo, lang) in MySQL than run very very slowly. We are working in the new format the last 4 years and the Beta 1 of Dédalo can run acceptably well. Dédalo have some caches for run the searchers but this version don't work "fine" with a large amount of data >100.000 rows (>100.000 interviews, or >100.000 heritage goods...).
 
 But
 
