client_api/v1 minor code changes

--- a/lib/dedalo/publication/client_api/v1/web_app/lang/mht/lg-spa.json
+++ b/lib/dedalo/publication/client_api/v1/web_app/lang/mht/lg-spa.json
@@ -1,5 +1,6 @@
 {
     "inicio": "Inicio",
+    "Maternidades robadas": "Maternidades robadas",
     "mas": "Más",
     "load_more": "Cargar más",
     "idioma": "Idioma",
