--- a/lib/dedalo/publication/client_api/v1/web_app/lang/mht/lg-eng.json
+++ b/lib/dedalo/publication/client_api/v1/web_app/lang/mht/lg-eng.json
@@ -1,5 +1,6 @@
 {
     "inicio": "Home",
+    "Maternidades robadas": "Stolen maternities",
     "mas": "More",
     "load_more": "Load more",
     "idioma": "Lang",
