--- a/lib/dedalo/publication/client_api/v1/web_app/lang/murapa/lg-vlca.json
+++ b/lib/dedalo/publication/client_api/v1/web_app/lang/murapa/lg-vlca.json
@@ -8,6 +8,7 @@
   "testimonio": "Testimony",
   "transcripcion": "Transcripció",
   "video": "Vídeo",
+  "videos": "Vídeos",
   "ver_video": "Veure vídeo",
   "resumen": "Resum",
   "busqueda_libre": "Cerca lliure",
@@ -21,5 +22,18 @@
   "completa": "Completa",
   "rostros": "Protagonistes",
   "temas": "Temes",
-  "busqueda_libre_texto": "<span style=\"color: #28292b;\"><span style=\"color: #28292b;\"><span style=\"font-size: 11pt;\">La cerca es pot realitzar amb operadors:</span><br /><br /></span></span>\n\t\t\t\t\t\t\t\t\t<table style=\"height: 132px; width: 970px;\">\n\t\t\t\t\t\t\t\t\t<tbody>\n\t\t\t\t\t\t\t\t\t<tr>\n\t\t\t\t\t\t\t\t\t<td style=\"width: 110px;\">Conté :</td>\n\t\t\t\t\t\t\t\t\t<td style=\"width: 900px;\"><strong>Francisco Franco</strong></td>\n\t\t\t\t\t\t\t\t\t</tr>\n\t\t\t\t\t\t\t\t\t<tr>\n\t\t\t\t\t\t\t\t\t<td style=\"width: 110px;\"> </td>\n\t\t\t\t\t\t\t\t\t<td style=\"width: 900px;\">(es busca \"Francisco\" i es busca \"Franco\" per separat, pot aparèixer \"Francisco Domingo Guasc\", etc)</td>\n\t\t\t\t\t\t\t\t\t</tr>\n\t\t\t\t\t\t\t\t\t<tr>\n\t\t\t\t\t\t\t\t\t<td style=\"width: 110px;\">Literal :</td>\n\t\t\t\t\t\t\t\t\t<td style=\"width: 900px;\"><strong>\"Francisco Franco\"</strong></td>\n\t\t\t\t\t\t\t\t\t</tr>\n\t\t\t\t\t\t\t\t\t<tr>\n\t\t\t\t\t\t\t\t\t<td style=\"width: 110px;\"> </td>\n\t\t\t\t\t\t\t\t\t<td style=\"width: 900px;\">(es busca la coincidència completa i només apareix quan la coincidència de les dues paraules concorda)</td>\n\t\t\t\t\t\t\t\t\t</tr>\n\t\t\t\t\t\t\t\t\t<tr>\n\t\t\t\t\t\t\t\t\t<td style=\"width: 110px;\">Comença per:</td>\n\t\t\t\t\t\t\t\t\t<td style=\"width: 900px;\"><strong>Franci*</strong></td>\n\t\t\t\t\t\t\t\t\t</tr>\n\t\t\t\t\t\t\t\t\t<tr>\n\t\t\t\t\t\t\t\t\t<td style=\"width: 110px;\"> </td>\n\t\t\t\t\t\t\t\t\t<td style=\"width: 900px;\">(Troba \"França\", \"Francisco\", \"Francisca\", etc)</td>\n\t\t\t\t\t\t\t\t\t</tr>\n\t\t\t\t\t\t\t\t\t<tr>\n\t\t\t\t\t\t\t\t\t<td style=\"width: 110px;\">Excloure :</td>\n\t\t\t\t\t\t\t\t\t<td style=\"width: 900px;\"><strong>Francisco -Domingo</strong></td>\n\t\t\t\t\t\t\t\t\t</tr>\n\t\t\t\t\t\t\t\t\t<tr>\n\t\t\t\t\t\t\t\t\t<td style=\"width: 110px;\"> </td>\n\t\t\t\t\t\t\t\t\t<td style=\"width: 900px;\">(Elimina la coincidencia de \"Francisco\" amb \"Domingo\" del resultat de la recerca)</td>\n\t\t\t\t\t\t\t\t\t</tr>\n\t\t\t\t\t\t\t\t\t</tbody>\n\t\t\t\t\t\t\t\t\t</table>"
+  "busqueda_libre_texto": "<span style=\"color: #28292b;\"><span style=\"color: #28292b;\"><span style=\"font-size: 11pt;\">La cerca es pot realitzar amb operadors:</span><br /><br /></span></span>\n\t\t\t\t\t\t\t\t\t<table style=\"height: 132px; width: 970px;\">\n\t\t\t\t\t\t\t\t\t<tbody>\n\t\t\t\t\t\t\t\t\t<tr>\n\t\t\t\t\t\t\t\t\t<td style=\"width: 110px;\">Conté :</td>\n\t\t\t\t\t\t\t\t\t<td style=\"width: 900px;\"><strong>Francisco Franco</strong></td>\n\t\t\t\t\t\t\t\t\t</tr>\n\t\t\t\t\t\t\t\t\t<tr>\n\t\t\t\t\t\t\t\t\t<td style=\"width: 110px;\"> </td>\n\t\t\t\t\t\t\t\t\t<td style=\"width: 900px;\">(es busca \"Francisco\" i es busca \"Franco\" per separat, pot aparèixer \"Francisco Domingo Guasc\", etc)</td>\n\t\t\t\t\t\t\t\t\t</tr>\n\t\t\t\t\t\t\t\t\t<tr>\n\t\t\t\t\t\t\t\t\t<td style=\"width: 110px;\">Literal :</td>\n\t\t\t\t\t\t\t\t\t<td style=\"width: 900px;\"><strong>\"Francisco Franco\"</strong></td>\n\t\t\t\t\t\t\t\t\t</tr>\n\t\t\t\t\t\t\t\t\t<tr>\n\t\t\t\t\t\t\t\t\t<td style=\"width: 110px;\"> </td>\n\t\t\t\t\t\t\t\t\t<td style=\"width: 900px;\">(es busca la coincidència completa i només apareix quan la coincidència de les dues paraules concorda)</td>\n\t\t\t\t\t\t\t\t\t</tr>\n\t\t\t\t\t\t\t\t\t<tr>\n\t\t\t\t\t\t\t\t\t<td style=\"width: 110px;\">Comença per:</td>\n\t\t\t\t\t\t\t\t\t<td style=\"width: 900px;\"><strong>Franci*</strong></td>\n\t\t\t\t\t\t\t\t\t</tr>\n\t\t\t\t\t\t\t\t\t<tr>\n\t\t\t\t\t\t\t\t\t<td style=\"width: 110px;\"> </td>\n\t\t\t\t\t\t\t\t\t<td style=\"width: 900px;\">(Troba \"França\", \"Francisco\", \"Francisca\", etc)</td>\n\t\t\t\t\t\t\t\t\t</tr>\n\t\t\t\t\t\t\t\t\t<tr>\n\t\t\t\t\t\t\t\t\t<td style=\"width: 110px;\">Excloure :</td>\n\t\t\t\t\t\t\t\t\t<td style=\"width: 900px;\"><strong>Francisco -Domingo</strong></td>\n\t\t\t\t\t\t\t\t\t</tr>\n\t\t\t\t\t\t\t\t\t<tr>\n\t\t\t\t\t\t\t\t\t<td style=\"width: 110px;\"> </td>\n\t\t\t\t\t\t\t\t\t<td style=\"width: 900px;\">(Elimina la coincidencia de \"Francisco\" amb \"Domingo\" del resultat de la recerca)</td>\n\t\t\t\t\t\t\t\t\t</tr>\n\t\t\t\t\t\t\t\t\t</tbody>\n\t\t\t\t\t\t\t\t\t</table>",
+  "nombre": "Nombre",
+  "imagenes": "Imatges",
+  "imagen": "Imatge",
+  "de": "de",
+  "cerrar": "Tancar",
+  "error_carga_contenido": "Error en la càrrega del contingut",
+  "error_carga_imagen" : "Error en la càrrega de la imatge",
+  "nombre_o_apellidos" : "Nom o cognoms de la persona",
+  "escriba_el_nombre": "Filtra la informació escrivint un nom, cognom o tots dos",
+  "tematicas" : "Temàtiques",
+  "libres" : "Lliures",
+  "otras_busquedas": "Explora altres cerques",
+  "libro_gabarda_titulo": "De la rereguarda a les presons"
 }
